--- a/css/component.css
+++ b/css/component.css
@@ -67,7 +67,7 @@ html, body, .perspective {
 	position: absolute;
 	overflow: hidden;
 	width: 100%;
-	height: 100%;
+	height: initial;
 	cursor: pointer;
 	-webkit-backface-visibility: hidden;
 	backface-visibility: hidden;
